--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,14 +31,29 @@ set(LLVM_SRC_DIR "${WEBVULKAN_THIRDPARTY_DIR}/llvm-project" CACHE PATH "Path whe
 set(LLVM_HOST_BUILD_DIR "${WEBVULKAN_BUILD_DIR}/llvm-host-tools" CACHE PATH "LLVM host tools build directory")
 set(LLVM_WASM_BUILD_DIR "${WEBVULKAN_BUILD_DIR}/llvm-wasm" CACHE PATH "LLVM wasm build directory")
 set(LLVM_WASM_INSTALL_DIR "${WEBVULKAN_THIRDPARTY_DIR}/llvm-wasm-install" CACHE PATH "LLVM wasm install directory")
-set(LLVM_PROVIDER "source" CACHE STRING "LLVM provider: source, prebuilt, or system")
+set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_URL "https://github.com/Devsh-Graphics-Programming/llvmpipe2wasm/releases/download/llvm-wasm-prebuilt-v1/llvm-wasm-install.zip")
+if(DEFINED ENV{WEBVULKAN_LLVM_PREBUILT_URL} AND NOT "$ENV{WEBVULKAN_LLVM_PREBUILT_URL}" STREQUAL "")
+  set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_URL "$ENV{WEBVULKAN_LLVM_PREBUILT_URL}")
+endif()
+
+set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_SHA256 "35eb59a16a2fb1ea244bb582f68ac4f805b8be4c949f1e610f54e5c0bb9060ea")
+if(DEFINED ENV{WEBVULKAN_LLVM_PREBUILT_SHA256} AND NOT "$ENV{WEBVULKAN_LLVM_PREBUILT_SHA256}" STREQUAL "")
+  set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_SHA256 "$ENV{WEBVULKAN_LLVM_PREBUILT_SHA256}")
+endif()
+
+set(LLVM_PREBUILT_URL "${_WEBVULKAN_DEFAULT_LLVM_PREBUILT_URL}" CACHE STRING "URL to prebuilt LLVM wasm archive for LLVM_PROVIDER=prebuilt")
+set(LLVM_PREBUILT_SHA256 "${_WEBVULKAN_DEFAULT_LLVM_PREBUILT_SHA256}" CACHE STRING "SHA256 for LLVM_PREBUILT_URL (optional)")
+set(LLVM_PROVIDER "prebuilt" CACHE STRING "LLVM provider: source, prebuilt, or system")
 set_property(CACHE LLVM_PROVIDER PROPERTY STRINGS source prebuilt system)
 set(LLVM_GIT_REF "afd4df07ab0262482829d4410a6bae9f2809d37b" CACHE STRING "Pinned LLVM git ref")
 if(LLVM_GIT_REF STREQUAL "ee9aeb4e05aa8edd2077b79f6712ea353ef5be77")
   set(LLVM_GIT_REF "afd4df07ab0262482829d4410a6bae9f2809d37b" CACHE STRING "Pinned LLVM git ref" FORCE)
 endif()
-set(LLVM_PREBUILT_URL "" CACHE STRING "URL to prebuilt LLVM wasm archive for LLVM_PROVIDER=prebuilt")
-set(LLVM_PREBUILT_SHA256 "" CACHE STRING "SHA256 for LLVM_PREBUILT_URL (optional)")
+if(NOT LLVM_PROVIDER STREQUAL "source"
+   AND NOT LLVM_PROVIDER STREQUAL "prebuilt"
+   AND NOT LLVM_PROVIDER STREQUAL "system")
+  message(FATAL_ERROR "LLVM_PROVIDER must be one of: source, prebuilt, system")
+endif()
 
 set(CPM_SOURCE_CACHE "${WEBVULKAN_CPM_SOURCE_CACHE}" CACHE PATH "CPM source cache path" FORCE)
 set(FETCHCONTENT_QUIET OFF)
