--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install host tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y ninja-build flex bison python3-pip
+          sudo apt-get install -y ninja-build flex bison python3-pip glslang-tools
           python3 -m pip install --upgrade pip
           python3 -m pip install cmake==4.2.0
 
