Add auto prebuilt refresh pipeline and release channels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,12 +31,12 @@ set(LLVM_SRC_DIR "${WEBVULKAN_THIRDPARTY_DIR}/llvm-project" CACHE PATH "Path whe
 set(LLVM_HOST_BUILD_DIR "${WEBVULKAN_BUILD_DIR}/llvm-host-tools" CACHE PATH "LLVM host tools build directory")
 set(LLVM_WASM_BUILD_DIR "${WEBVULKAN_BUILD_DIR}/llvm-wasm" CACHE PATH "LLVM wasm build directory")
 set(LLVM_WASM_INSTALL_DIR "${WEBVULKAN_THIRDPARTY_DIR}/llvm-wasm-install" CACHE PATH "LLVM wasm install directory")
-set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_URL "https://github.com/Devsh-Graphics-Programming/llvmpipe2wasm/releases/download/llvm-wasm-prebuilt-v1/llvm-wasm-install.zip")
+set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_URL "https://github.com/Devsh-Graphics-Programming/llvmpipe2wasm/releases/download/llvm-wasm-prebuilt-latest/llvm-wasm-install.zip")
 if(DEFINED ENV{WEBVULKAN_LLVM_PREBUILT_URL} AND NOT "$ENV{WEBVULKAN_LLVM_PREBUILT_URL}" STREQUAL "")
   set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_URL "$ENV{WEBVULKAN_LLVM_PREBUILT_URL}")
 endif()
 
-set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_SHA256 "35eb59a16a2fb1ea244bb582f68ac4f805b8be4c949f1e610f54e5c0bb9060ea")
+set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_SHA256 "")
 if(DEFINED ENV{WEBVULKAN_LLVM_PREBUILT_SHA256} AND NOT "$ENV{WEBVULKAN_LLVM_PREBUILT_SHA256}" STREQUAL "")
   set(_WEBVULKAN_DEFAULT_LLVM_PREBUILT_SHA256 "$ENV{WEBVULKAN_LLVM_PREBUILT_SHA256}")
 endif()
