Fix sparse tests CPM bootstrap

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,8 +31,26 @@ if(NOT COMMAND CPMAddPackage)
   else()
     set(CPM_UPDATE_DISCONNECTED ON CACHE BOOL "CPM update disconnected mode" FORCE)
   endif()
-  include("${CMAKE_CURRENT_LIST_DIR}/../cmake/BootstrapCpm.cmake")
-  webvulkan_bootstrap_cpm()
+  set(_webvulkan_root_bootstrap_cpm "${CMAKE_CURRENT_LIST_DIR}/../cmake/BootstrapCpm.cmake")
+  if(EXISTS "${_webvulkan_root_bootstrap_cpm}")
+    include("${_webvulkan_root_bootstrap_cpm}")
+    webvulkan_bootstrap_cpm()
+  else()
+    file(MAKE_DIRECTORY "${WEBVULKAN_CPM_DIR}")
+    set(_webvulkan_tests_cpm_file "${WEBVULKAN_CPM_DIR}/CPM_${WEBVULKAN_CPM_VERSION}.cmake")
+    set(_webvulkan_tests_cpm_url "https://github.com/cpm-cmake/CPM.cmake/releases/download/v${WEBVULKAN_CPM_VERSION}/CPM.cmake")
+    if(NOT EXISTS "${_webvulkan_tests_cpm_file}")
+      message(STATUS "Downloading CPM.cmake v${WEBVULKAN_CPM_VERSION} for tests")
+      file(DOWNLOAD "${_webvulkan_tests_cpm_url}" "${_webvulkan_tests_cpm_file}" STATUS _webvulkan_tests_cpm_download_status TLS_VERIFY ON)
+      list(GET _webvulkan_tests_cpm_download_status 0 _webvulkan_tests_cpm_download_code)
+      if(NOT _webvulkan_tests_cpm_download_code EQUAL 0)
+        list(GET _webvulkan_tests_cpm_download_status 1 _webvulkan_tests_cpm_download_message)
+        file(REMOVE "${_webvulkan_tests_cpm_file}")
+        message(FATAL_ERROR "Failed to download CPM.cmake from ${_webvulkan_tests_cpm_url}: ${_webvulkan_tests_cpm_download_message}")
+      endif()
+    endif()
+    include("${_webvulkan_tests_cpm_file}")
+  endif()
 endif()
 
 set(_webvulkan_test_mode "${WEBVULKAN_TEST_MODE}")
