--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 option(WASM_AUTO_FETCH_TOOLS "Auto-download missing tools during configure" ON)
 option(WEBVULKAN_BUILD_TESTS "Build maintainer smoke tests" OFF)
 option(WEBVULKAN_ALLOW_DEP_UPDATES "Allow dependency git update during configure" OFF)
+option(WEBVULKAN_DEPS_EDITABLE "Use editable local dependency checkouts without automatic git reset/update" OFF)
 set(WASM_EMSDK_VERSION "latest" CACHE STRING "emsdk version or tag")
 set(WASM_EMSDK_GIT_URL "https://github.com/emscripten-core/emsdk.git" CACHE STRING "emsdk git repository URL")
 set(WASM_EMSDK_GIT_REF "14c18b569f55138fe4963924162244251f454fb0" CACHE STRING "Pinned emsdk git ref")
@@ -25,7 +26,7 @@ set(WASM_BUILD_DIR "${WEBVULKAN_BUILD_DIR}/wasm" CACHE PATH "WASM sub-build dire
 set(WEBVULKAN_EMSCRIPTEN_TOOLCHAIN_FILE "${PROJECT_SOURCE_DIR}/cmake/toolchains/WebVulkanEmscripten.cmake" CACHE FILEPATH "Custom Emscripten toolchain file")
 set(MESA_SRC_DIR "${WEBVULKAN_THIRDPARTY_DIR}/mesa" CACHE PATH "Path where Mesa is cloned")
 set(MESA_GIT_URL "https://github.com/Devsh-Graphics-Programming/mesa.git" CACHE STRING "Mesa git repository URL")
-set(MESA_GIT_REF "ca61cf8e8fcf6b2e57ca714ecc3fdb7d5699cf64" CACHE STRING "Pinned Mesa git ref")
+set(MESA_GIT_REF "caeeea677046411288c1a5155d81b27640aedd3a" CACHE STRING "Pinned Mesa git ref")
 set(MESA_WASM_BUILD_DIR "${WEBVULKAN_BUILD_DIR}/mesa-wasm" CACHE PATH "Mesa WASM build directory")
 set(LLVM_SRC_DIR "${WEBVULKAN_THIRDPARTY_DIR}/llvm-project" CACHE PATH "Path where llvm-project is cloned")
 set(LLVM_HOST_BUILD_DIR "${WEBVULKAN_BUILD_DIR}/llvm-host-tools" CACHE PATH "LLVM host tools build directory")
@@ -58,7 +59,10 @@ endif()
 
 set(CPM_SOURCE_CACHE "${WEBVULKAN_CPM_SOURCE_CACHE}" CACHE PATH "CPM source cache path" FORCE)
 set(FETCHCONTENT_QUIET OFF)
-if(WEBVULKAN_ALLOW_DEP_UPDATES)
+if(WEBVULKAN_DEPS_EDITABLE)
+  set(_WEBVULKAN_FETCH_UPDATES_DISCONNECTED ON)
+  message(STATUS "WEBVULKAN_DEPS_EDITABLE=ON: local dependency checkouts are used without remote updates")
+elseif(WEBVULKAN_ALLOW_DEP_UPDATES)
   set(_WEBVULKAN_FETCH_UPDATES_DISCONNECTED OFF)
 else()
   set(_WEBVULKAN_FETCH_UPDATES_DISCONNECTED ON)
